Migration to Mercado Bitcoin v4 API.