@@ -9,28 +9,21 @@ package org.nucleodevel.cointrader.api.mercadobitcoin;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.io.OutputStreamWriter;
+import java.io.OutputStream;
 import java.math.BigDecimal;
-import java.math.BigInteger;
 import java.math.RoundingMode;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.URL;
-import java.security.InvalidKeyException;
-import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collections;
-import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.TimeZone;
 import java.util.concurrent.TimeUnit;
 
-import javax.crypto.Mac;
-import javax.crypto.spec.SecretKeySpec;
 import javax.net.ssl.HttpsURLConnection;
 
 import org.nucleodevel.cointrader.api.ApiService;
@@ -47,7 +40,6 @@ import org.nucleodevel.cointrader.beans.RecordSide;
 import org.nucleodevel.cointrader.beans.Ticker;
 import org.nucleodevel.cointrader.beans.UserConfiguration;
 import org.nucleodevel.cointrader.exception.ApiProviderException;
-import org.nucleodevel.cointrader.utils.JsonHashMap;
 
 import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
@@ -55,6 +47,9 @@ import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
 
 public class MercadoBitcoinApiService extends ApiService {
+
+	private static Authorized authorized;
+	private static Account account;
 
 	// --------------------- Constructor
 
@@ -67,12 +62,12 @@ public class MercadoBitcoinApiService extends ApiService {
 
 	@Override
 	protected String getDomain() {
-		return "https://www.mercadobitcoin.net";
+		return "https://api.mercadobitcoin.net";
 	}
 
 	@Override
 	protected String getPublicApiUrl() {
-		return getDomain() + getPublicApiPath() + getCoin().getValue() + "/";
+		return getDomain() + getPublicApiPath() + "/";
 	}
 
 	@Override
@@ -82,12 +77,12 @@ public class MercadoBitcoinApiService extends ApiService {
 
 	@Override
 	protected String getPublicApiPath() {
-		return "/api/";
+		return "/api/v4/";
 	}
 
 	@Override
 	protected String getPrivateApiPath() {
-		return "/tapi/v3/";
+		return "/api/v4/accounts/" + account.getId() + "/";
 	}
 
 	@Override
@@ -105,134 +100,70 @@ public class MercadoBitcoinApiService extends ApiService {
 		if (userConfiguration.getKey() == null) {
 			throw new ApiProviderException("Null key.");
 		}
+	}
 
-		this.mbTapiCodeBytes = userConfiguration.getSecret().getBytes();
+	private String getCoinCurrencyPairUrlString() {
+		return getCoin().getValue().toUpperCase() + "-" + getCurrency().getValue().toUpperCase();
 	}
 
 	// --------------------- Overrided methods
 
 	@Override
 	public Ticker getTicker() throws ApiProviderException {
-		Ticker ticker = new Ticker(getCoin(), getCurrency());
-
-		BigDecimal high = new BigDecimal(0);
-		BigDecimal low = new BigDecimal(Double.MAX_VALUE);
-		BigDecimal vol = new BigDecimal(0);
-
-		Calendar from = Calendar.getInstance();
-		Calendar to = Calendar.getInstance();
-
-		from.setTime(new Date());
-		from.add(Calendar.HOUR, -24);
-		to.setTime(new Date());
-
-		List<Operation> operations = getOperationList(from, to);
-
-		for (Operation operation : operations) {
-			vol = vol.add(operation.getCoinAmount());
-			if (operation.getCurrencyPrice().compareTo(high) == 1)
-				high = operation.getCurrencyPrice();
-			if (operation.getCurrencyPrice().compareTo(low) == -1)
-				low = operation.getCurrencyPrice();
-		}
-
-		ticker.setHigh(high);
-		ticker.setLow(low);
-		ticker.setVol(vol);
-
-		from.setTime(new Date());
-		from.add(Calendar.HOUR, -3);
-		to.setTime(new Date());
-		BigDecimal last3HourVolume = new BigDecimal(0);
-		List<Operation> last3HourOperations = getOperationList(from, to);
-
-		for (Operation operation : last3HourOperations)
-			last3HourVolume = last3HourVolume.add(operation.getCoinAmount());
-
-		ticker.setLast3HourVolume(last3HourVolume);
-
-		return ticker;
+		Map<String, String> queryParamMap = Map.of("symbols", getCoinCurrencyPairUrlString());
+		JsonArray tickerJsonArray = (JsonArray) makePublicRequest("tickers", queryParamMap);
+		return getTicker(tickerJsonArray);
 	}
 
 	@Override
 	public Balance getBalance() throws ApiProviderException {
-		JsonObject jsonObject = makePrivateRequest("get_account_info", ApiVersion.V3);
-		if (jsonObject == null)
+		JsonElement jsonElement = makePrivateRequest("balances", "GET", null);
+		if (jsonElement == null)
 			throw new ApiProviderException("Balance is not available!");
-		return getBalance(jsonObject);
+
+		JsonArray jsonArray = jsonElement.getAsJsonArray();
+		return getBalance(jsonArray);
 	}
 
 	@Override
 	public OrderBook getOrderBook() throws ApiProviderException {
-		JsonObject orderBookJsonObject = (JsonObject) makePublicRequest("orderbook");
-		return getOrderBook(orderBookJsonObject);
+		Map<String, String> queryParamMap = Map.of("limit", "100");
+		JsonObject orderBookJsonArray = (JsonObject) makePublicRequest(getCoinCurrencyPairUrlString() + "/orderbook",
+				queryParamMap);
+		return getOrderBook(orderBookJsonArray);
 	}
 
 	@Override
 	public List<Operation> getOperationList(Calendar from, Calendar to) throws ApiProviderException {
-		List<String> paths = new ArrayList<String>();
-		paths.add(from.getTimeInMillis() / 1000 + "/");
-
-		if (to != null)
-			paths.add(to.getTimeInMillis() / 1000 + "/");
-
-		String[] complements = paths.toArray(new String[0]);
-
-		JsonArray jsonArray = makePublicRequest("trades", complements).getAsJsonArray();
-
-		// Convert Json response to object
-		Operation[] operationList = new Operation[jsonArray.size()];
-		for (int i = 0; i < jsonArray.size(); i++) {
-			JsonObject jsonObject = jsonArray.get(i).getAsJsonObject();
-
-			long created = Integer.valueOf(jsonObject.get("date").toString());
-			BigDecimal coinAmount = new BigDecimal(jsonObject.get("amount").toString());
-			BigDecimal currencyPrice = new BigDecimal(jsonObject.get("price").toString());
-
-			String sideString = jsonObject.get("type").getAsString();
-			RecordSide side = sideString.equals("buy") ? RecordSide.BUY
-					: (sideString.equals("sell") ? RecordSide.SELL : null);
-
-			Operation operation = new Operation(getCoin(), getCurrency(), side, coinAmount, currencyPrice);
-
-			operation.setId(BigInteger.valueOf(jsonObject.get("tid").getAsLong()));
-			operation.setRate(null);
-			operation.setCreationDate(Calendar.getInstance());
-			operation.getCreationDate().setTimeInMillis(created * 1000);
-
-			operationList[i] = operation;
-		}
-
-		List<Operation> operations = Arrays.asList(operationList);
-
-		return operations;
+		return List.of();
 	}
 
-	private List<Order> getUserOrders(RecordFilter filter) throws ApiProviderException {
-		if (filter == null) {
-			throw new ApiProviderException("Invalid filter.");
+	private List<Order> getUserOrders(OrderStatus status) throws ApiProviderException {
+
+		Map<String, String> queryParamMap = new HashMap<>();
+		if (status != null) {
+			String statusStr = status == OrderStatus.ACTIVE ? "working"
+					: (status == OrderStatus.CANCELED ? "cancelled"
+							: (status == OrderStatus.COMPLETED ? "filled" : null));
+			queryParamMap.put("status", statusStr);
 		}
-		JsonObject jsonResponse = makePrivateRequest(getParams(filter), "list_orders", ApiVersion.V3);
 
-		JsonArray jsonArray = jsonResponse != null ? jsonResponse.get("orders").getAsJsonArray() : new JsonArray();
+		JsonElement jsonElement = makePrivateRequest(getCoinCurrencyPairUrlString() + "/orders", "GET", queryParamMap);
+		if (jsonElement == null)
+			throw new ApiProviderException("List of user active orders is not available!");
 
+		JsonArray jsonArray = jsonElement.getAsJsonArray();
 		List<Order> orders = new ArrayList<Order>();
 		for (JsonElement jsonOrder : jsonArray) {
 			Order order = getOrder(jsonOrder.getAsJsonObject());
 			orders.add(order);
 		}
-
 		return orders;
 	}
 
 	@Override
 	public List<Order> getUserActiveOrders() throws ApiProviderException {
-		RecordFilter orderFilter = new RecordFilter(getCoin(), getCurrency());
-		orderFilter.setStatus(OrderStatus.ACTIVE);
-
-		List<Order> orders = getUserOrders(orderFilter);
-		Collections.sort(orders);
-		return orders;
+		return getUserOrders(OrderStatus.ACTIVE);
 	}
 
 	@Override
@@ -240,7 +171,7 @@ public class MercadoBitcoinApiService extends ApiService {
 		RecordFilter orderFilter = new RecordFilter(getCoin(), getCurrency());
 		orderFilter.setHasFills(true);
 
-		List<Order> completedOrders = getUserOrders(orderFilter);
+		List<Order> completedOrders = getUserOrders(OrderStatus.COMPLETED);
 		Collections.sort(completedOrders);
 
 		List<Operation> operations = new ArrayList<Operation>();
@@ -257,65 +188,152 @@ public class MercadoBitcoinApiService extends ApiService {
 
 	@Override
 	public Order cancelOrder(Order order) throws ApiProviderException {
-		if (order == null) {
+		if (order == null)
 			throw new ApiProviderException("Invalid order.");
-		}
 
-		makePrivateRequest(getParams(order, ApiVersion.V3), "cancel_order", ApiVersion.V3);
+		makePrivateRequest(getCoinCurrencyPairUrlString() + "/orders/" + order.getId(), "DELETE", null);
 		order.setStatus(OrderStatus.CANCELED);
 		return order;
 	}
 
 	@Override
 	public Order createOrder(Order order) throws ApiProviderException {
-		if (order == null) {
+		if (order == null)
 			throw new ApiProviderException("Invalid order.");
-		}
 
-		if (order.getSide() == RecordSide.BUY)
-			makePrivateRequest(getParams(order, ApiVersion.V3), "place_buy_order", ApiVersion.V3);
-		else if (order.getSide() == RecordSide.SELL)
-			makePrivateRequest(getParams(order, ApiVersion.V3), "place_sell_order", ApiVersion.V3);
+		JsonElement jsonResponse = makePrivateRequest(getParams(order), getCoinCurrencyPairUrlString() + "/orders",
+				"POST", null);
+
+		JsonObject jsonObject = jsonResponse.getAsJsonObject();
+		String id = jsonObject.getAsJsonPrimitive("orderId").getAsString();
+		order.setId(id);
 
 		return order;
 	}
 
-	@SuppressWarnings("unused")
-	private Order v1CancelOrder(Order order) throws ApiProviderException {
-		if (order == null) {
-			throw new ApiProviderException("Invalid filter.");
-		}
-
-		makePrivateRequest(getParams(order, ApiVersion.V1), "CancelOrder", ApiVersion.V1);
-		return null;
-	}
-
-	@SuppressWarnings("unused")
-	private Order v1CreateOrder(Order order) throws ApiProviderException {
-		if (order == null) {
-			throw new ApiProviderException("Invalid order.");
-		}
-
-		Order newOrder = new Order(order.getCoin(), order.getCurrency(), order.getSide(), order.getCoinAmount(),
-				order.getCurrencyPrice());
-
-		makePrivateRequest(getParams(newOrder, ApiVersion.V1), "Trade", ApiVersion.V1);
-		return null;
-	}
-
 	// --------------------- Request methods
 
-	private JsonElement makePublicRequest(String method, String... pathParams) throws ApiProviderException {
+	private void authorize() throws ApiProviderException {
+
+		if (authorized == null || authorized.isExpired()) {
+			URL url;
+			try {
+				url = new URL(getDomain() + "/api/v4/authorize");
+
+				HttpURLConnection conn = (HttpsURLConnection) url.openConnection();
+
+				conn.setRequestMethod("POST");
+				conn.setRequestProperty("Content-Type", "application/json");
+				conn.setRequestProperty("Accept", "application/json");
+
+				conn.setDoOutput(true);
+
+				JsonObject bodyJsonObject = new JsonObject();
+				bodyJsonObject.addProperty("login", userConfiguration.getKey());
+				bodyJsonObject.addProperty("password", userConfiguration.getSecret());
+
+				String body = bodyJsonObject.toString();
+
+				try (OutputStream os = conn.getOutputStream()) {
+					byte[] input = body.getBytes("utf-8");
+					os.write(input, 0, input.length);
+				}
+				try (BufferedReader br = new BufferedReader(new InputStreamReader(conn.getInputStream(), "utf-8"))) {
+					StringBuilder response = new StringBuilder();
+					String responseLine = null;
+					while ((responseLine = br.readLine()) != null) {
+						response.append(responseLine.trim());
+					}
+
+					JsonObject jsonResponse = (JsonObject) JsonParser.parseString(response.toString());
+					String accessToken = jsonResponse.getAsJsonPrimitive("access_token").getAsString();
+
+					if (accessToken != null && !accessToken.isEmpty()) {
+						long expiration = jsonResponse.getAsJsonPrimitive("expiration").getAsLong();
+
+						authorized = new Authorized(accessToken, expiration);
+					}
+				}
+			} catch (IOException e) {
+				e.printStackTrace();
+				throw new ApiProviderException("Internal error: Failure in connection.");
+			}
+		}
+	}
+
+	private Account getAccount() throws ApiProviderException {
+
+		if (authorized == null || authorized.isExpired()) {
+			authorize();
+		}
+
+		if (account == null) {
+			URL url;
+			try {
+				url = new URL(getDomain() + "/api/v4/accounts");
+
+				HttpURLConnection conn = (HttpsURLConnection) url.openConnection();
+
+				conn.setRequestMethod("GET");
+				conn.setRequestProperty("Content-Type", "application/json");
+				conn.setRequestProperty("Authorization", "Bearer " + authorized.getAccessToken());
+
+				try (BufferedReader br = new BufferedReader(new InputStreamReader(conn.getInputStream(), "utf-8"))) {
+					StringBuilder response = new StringBuilder();
+					String responseLine = null;
+					while ((responseLine = br.readLine()) != null) {
+						response.append(responseLine.trim());
+					}
+
+					JsonArray jsonResponse = (JsonArray) JsonParser.parseString(response.toString());
+					if (jsonResponse != null && jsonResponse.size() > 0) {
+						JsonObject jsonObject = jsonResponse.get(0).getAsJsonObject();
+
+						String id = jsonObject.getAsJsonPrimitive("id").getAsString();
+						String name = jsonObject.getAsJsonPrimitive("name").getAsString();
+						String type = jsonObject.getAsJsonPrimitive("type").getAsString();
+						String currency = jsonObject.getAsJsonPrimitive("currency").getAsString();
+						String currencySign = jsonObject.getAsJsonPrimitive("currency").getAsString();
+
+						account = new Account(id, name, type, currency, currencySign);
+					}
+				}
+			} catch (IOException e) {
+				e.printStackTrace();
+				throw new ApiProviderException("Internal error: Failure in connection.");
+			}
+		}
+
+		return account;
+	}
+
+	private JsonElement makePublicRequest(String method, Map<String, String> params) throws ApiProviderException {
+
+		// putting delay time
+		try {
+			TimeUnit.MILLISECONDS.sleep(1010);
+		} catch (InterruptedException e) {
+			e.printStackTrace();
+		}
+
 		if (getCoin() == null || getCurrency() == null) {
 			throw new ApiProviderException("Invalid coin pair.");
 		}
 
 		StringBuffer url = new StringBuffer(method);
-		url.append("/");
 
-		for (String pathParam : pathParams) {
-			url.append(pathParam);
+		StringBuilder queryString = new StringBuilder();
+		if (params != null) {
+			queryString.append("?");
+			for (Map.Entry<String, String> param : params.entrySet()) {
+				if (queryString.length() > 0) {
+					queryString.append("&");
+				}
+				queryString.append(param.getKey()).append("=").append(param.getValue());
+			}
 		}
+
+		url.append(queryString);
 
 		try {
 			URL urlVar = new URL(getPublicApiUrl() + url.toString());
@@ -354,45 +372,60 @@ public class MercadoBitcoinApiService extends ApiService {
 		}
 	}
 
-	private JsonObject makePrivateRequest(String method, ApiVersion version) throws ApiProviderException {
-		return makePrivateRequest(new JsonHashMap(), method, version);
+	private JsonElement makePrivateRequest(String method, String requestMethod, Map<String, String> queryParams)
+			throws ApiProviderException {
+		return makePrivateRequest(null, method, requestMethod, queryParams);
 	}
 
-	private JsonObject makePrivateRequest(JsonHashMap params, String method, ApiVersion version)
-			throws ApiProviderException {
-		if (version == ApiVersion.V3) {
-			params.put("tapi_nonce", generateTonce());
-			params.put(METHOD_PARAM, method);
-		} else if (version == ApiVersion.V1) {
-			params.put(V1_METHOD_PARAM, method);
-			params.put("tonce", generateTonce());
+	private JsonElement makePrivateRequest(JsonObject bodyJsonObject, String method, String requestMethod,
+			Map<String, String> queryParams) throws ApiProviderException {
+
+		// putting delay time
+		try {
+			TimeUnit.MILLISECONDS.sleep(1010);
+		} catch (InterruptedException e) {
+			e.printStackTrace();
 		}
 
-		String jsonResponse = null;
+		if (account == null)
+			getAccount();
+
+		String responseStr = null;
 
 		try {
-			String jsonParams = params.toUrlEncoded();
-			String signature = version == ApiVersion.V3 ? generateSignature(getPrivateApiPath() + "?" + jsonParams)
-					: (version == ApiVersion.V1 ? generateSignature(jsonParams) : null);
-			URL url = version == ApiVersion.V3 ? new URL(getPrivateApiUrl())
-					: (version == ApiVersion.V1 ? new URL(getV1PrivateApiUrl()) : null);
+
+			StringBuilder queryString = new StringBuilder();
+			if (queryParams != null && !queryParams.isEmpty()) {
+				queryString.append("?");
+				for (Map.Entry<String, String> param : queryParams.entrySet()) {
+					if (queryString.length() > 0) {
+						queryString.append("&");
+					}
+					queryString.append(param.getKey()).append("=").append(param.getValue());
+				}
+			}
+
+			URL url = new URL(getPrivateApiUrl() + method + queryString);
+
 			HttpURLConnection conn;
 			conn = (HttpsURLConnection) url.openConnection();
 
-			conn.setRequestMethod("POST");
-			conn.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
-			if (version == ApiVersion.V3) {
-				conn.setRequestProperty("TAPI-ID", userConfiguration.getKey());
-				conn.setRequestProperty("TAPI-MAC", signature);
-			} else if (version == ApiVersion.V1) {
-				conn.setRequestProperty("Key", userConfiguration.getKey());
-				conn.setRequestProperty("Sign", signature);
+			conn.setRequestMethod(requestMethod);
+			conn.setRequestProperty("Content-Type", "application/json");
+			conn.setRequestProperty("Authorization", "Bearer " + authorized.getAccessToken());
+
+			if (bodyJsonObject != null) {
+				conn.setRequestProperty("Accept", "application/json");
+
+				conn.setDoOutput(true);
+
+				String body = bodyJsonObject.toString();
+				System.out.println(body);
+				try (OutputStream os = conn.getOutputStream()) {
+					byte[] input = body.getBytes("utf-8");
+					os.write(input, 0, input.length);
+				}
 			}
-			conn.setDoOutput(true);
-			OutputStreamWriter wr = new OutputStreamWriter(conn.getOutputStream());
-			wr.write(params.toUrlEncoded());
-			wr.flush();
-			wr.close();
 
 			BufferedReader reader = null;
 			reader = new BufferedReader(new InputStreamReader(conn.getInputStream()));
@@ -403,136 +436,93 @@ public class MercadoBitcoinApiService extends ApiService {
 				sb.append(line + "\n");
 			}
 
-			jsonResponse = sb.toString();
+			responseStr = sb.toString();
 		} catch (IOException e) {
 			e.printStackTrace();
 			throw new ApiProviderException("Internal error: Failure in connection.");
-		} catch (NoSuchAlgorithmException e) {
-			throw new ApiProviderException("Internal error: Cryptography Algorithm not found.");
-		} catch (InvalidKeyException e) {
-			throw new ApiProviderException("Invalid Key or Signature.");
 		}
 
-		if (jsonResponse == null) {
+		if (responseStr == null) {
 			throw new ApiProviderException("Internal error: null response from the server.");
 		}
 
-		JsonObject jsonObject = JsonParser.parseString(jsonResponse).getAsJsonObject();
+		JsonElement jsonResponse = JsonParser.parseString(responseStr);
 
-		JsonObject returnData = jsonObject.getAsJsonObject(
-				version == ApiVersion.V3 ? "response_data" : (version == ApiVersion.V1 ? "return" : null));
-		// putting delay time
-		try {
-			TimeUnit.MILLISECONDS.sleep(1010);
-		} catch (InterruptedException e) {
-			e.printStackTrace();
-		}
-
-		return (returnData == null) ? null : returnData;
+		return (jsonResponse == null) ? null : jsonResponse;
 	}
 
 	// --------------------- Object to json
 
-	private JsonHashMap getParams(Order order, ApiVersion version) throws ApiProviderException {
-		JsonHashMap hashMap = new JsonHashMap();
+	private JsonObject getParams(Order order) throws ApiProviderException {
+		JsonObject jsonObject = new JsonObject();
 		try {
-			Map<String, Object> params = new HashMap<String, Object>();
+			Double incDecPrice = Math.abs(userConfiguration.getIncDecPrice(order.getSide()));
+			Double log10 = Math.log10(incDecPrice);
+			int scale = Math.abs((int) Math.round(log10));
 
-			if (version == ApiVersion.V3) {
-				if (getCoin() != null && getCurrency() != null)
-					params.put("coin_pair",
-							getCurrency().getValue().toUpperCase() + getCoin().getValue().toUpperCase());
-				if (order.getCoinAmount() != null)
-					params.put("quantity", order.getCoinAmount().setScale(5, RoundingMode.DOWN));
-				if (order.getCurrencyPrice() != null)
-					params.put("limit_price", order.getCurrencyPrice().setScale(5, RoundingMode.DOWN));
-				if (order.getId() != null)
-					params.put("order_id", order.getId());
-			} else if (version == ApiVersion.V1) {
-				if (getCoin() != null && getCurrency() != null)
-					params.put("pair",
-							getCoin().getValue().toLowerCase() + "_" + getCurrency().getValue().toLowerCase());
-				if (order.getSide() != null)
-					params.put("type", order.getSide() == RecordSide.BUY ? "buy"
-							: (order.getSide() == RecordSide.SELL ? "sell" : null));
-				if (order.getCoinAmount() != null)
-					params.put("volume", order.getCoinAmount());
-				if (order.getCurrencyPrice() != null)
-					params.put("price", order.getCurrencyPrice());
-				if (order.getId() != null)
-					params.put("order_id", order.getId());
-				if (order.getStatus() != null)
-					params.put("status", order.getStatus());
-				if (order.getCreationDate() != null)
-					params.put("created", order.getCreationDate().getTime());
+			jsonObject.addProperty("async", false);
+			jsonObject.addProperty("type", "limit");
+			if (order.getSide() != null)
+				jsonObject.addProperty("side", order.getSide().getValue().toLowerCase());
+			if (order.getCoinAmount() != null)
+				jsonObject.addProperty("qty", "" + order.getCoinAmount());
+			if (order.getCurrencyPrice() != null) {
+				BigDecimal currencyPrice = order.getCurrencyPrice().setScale(scale, RoundingMode.HALF_UP);
+				jsonObject.addProperty("limitPrice", currencyPrice);
 			}
 
-			hashMap.putAll(params);
 		} catch (Throwable e) {
 			throw new ApiProviderException("Internal error: Unable to transform the parameters in a request.");
 		}
-		return hashMap;
-	}
-
-	private JsonHashMap getParams(RecordFilter filter) throws ApiProviderException {
-		JsonHashMap hashMap = new JsonHashMap();
-		try {
-			Map<String, Object> params = new HashMap<String, Object>();
-
-			if (filter.getCoin() != null && filter.getCurrency() != null)
-				params.put("coin_pair",
-						filter.getCurrency().getValue().toUpperCase() + filter.getCoin().getValue().toUpperCase());
-			if (filter.getSide() != null)
-				params.put("order_type",
-						filter.getSide() == RecordSide.BUY ? "1" : (filter.getSide() == RecordSide.SELL ? "2" : null));
-			if (filter.getStatus() != null)
-				params.put("status_list",
-						filter.getStatus() == OrderStatus.ACTIVE ? "[2]"
-								: (filter.getStatus() == OrderStatus.CANCELED ? "[3]"
-										: (filter.getStatus() == OrderStatus.COMPLETED ? "[4]" : null)));
-			if (filter.getHasFills() != null)
-				params.put("has_fills", filter.getHasFills());
-			if (filter.getFromId() != null)
-				params.put("from_id", filter.getFromId());
-			if (filter.getToId() != null)
-				params.put("to_id", filter.getToId());
-			if (filter.getFromTimestamp() != null)
-				params.put("from_timestamp", filter.getFromTimestamp());
-			if (filter.getToTimestamp() != null)
-				params.put("to_timestamp", filter.getToTimestamp());
-
-			hashMap.putAll(params);
-		} catch (Throwable e) {
-			throw new ApiProviderException("Internal error: Unable to transform the parameters in a request.");
-		}
-		return hashMap;
+		return jsonObject;
 	}
 
 	// --------------------- Json to object
 
-	private Balance getBalance(JsonObject balanceJsonObject) {
+	private Ticker getTicker(JsonArray tickerJsonArray) {
+		Coin coin = getCoin();
+		Currency currency = getCurrency();
+
+		Ticker ticker = new Ticker(coin, currency);
+
+		if (tickerJsonArray != null && !tickerJsonArray.isEmpty()) {
+			JsonObject tickerJsonObject = tickerJsonArray.get(0).getAsJsonObject();
+
+			ticker.setHigh(tickerJsonObject.getAsJsonPrimitive("high").getAsBigDecimal());
+			ticker.setLow(tickerJsonObject.getAsJsonPrimitive("low").getAsBigDecimal());
+			ticker.setVol(tickerJsonObject.getAsJsonPrimitive("vol").getAsBigDecimal());
+
+			ticker.setLast3HourVolume(ticker.getVol().divide(BigDecimal.valueOf(8L)));
+		}
+
+		return ticker;
+	}
+
+	private Balance getBalance(JsonArray balanceJsonArray) {
 		Balance balance = new Balance(getCoin(), getCurrency());
 
-		JsonObject jsonObject = balanceJsonObject.getAsJsonObject("balance");
+		for (JsonElement balanceJsonElement : balanceJsonArray) {
+			JsonObject balanceJsonObject = balanceJsonElement.getAsJsonObject();
 
-		JsonObject brlJsonObject = jsonObject.getAsJsonObject("brl");
-		BigDecimal brlAvailable = new BigDecimal(brlJsonObject.getAsJsonPrimitive("available").getAsString());
-		BigDecimal brlTotal = new BigDecimal(brlJsonObject.getAsJsonPrimitive("total").getAsString());
+			String symbol = balanceJsonObject.getAsJsonPrimitive("symbol").getAsString();
+			if (symbol.equals(getCurrency().getValue().toUpperCase())) {
+				BigDecimal currencyAmount = new BigDecimal(balanceJsonObject.getAsJsonPrimitive("total").getAsString());
+				BigDecimal currencyLocked = new BigDecimal(
+						balanceJsonObject.getAsJsonPrimitive("on_hold").getAsString());
 
-		JsonObject coinJsonObject = jsonObject.getAsJsonObject(getCoin().getValue().toLowerCase());
-		BigDecimal coinAvailable = new BigDecimal(coinJsonObject.getAsJsonPrimitive("available").getAsString());
-		BigDecimal coinTotal = new BigDecimal(coinJsonObject.getAsJsonPrimitive("total").getAsString());
+				balance.setCurrencyAmount(currencyAmount);
+				balance.setCurrencyLocked(currencyLocked);
+			} else if (symbol.equals(getCoin().getValue().toUpperCase())) {
+				BigDecimal coinAmount = new BigDecimal(balanceJsonObject.getAsJsonPrimitive("total").getAsString());
+				BigDecimal coinLocked = new BigDecimal(balanceJsonObject.getAsJsonPrimitive("on_hold").getAsString());
 
-		BigDecimal coinAmount = coinTotal;
-		BigDecimal currencyAmount = getCurrency() == Currency.BRL ? brlTotal : null;
+				balance.setCoinAmount(coinAmount);
+				balance.setCoinLocked(coinLocked);
+			}
 
-		BigDecimal coinLocked = coinTotal.subtract(coinAvailable);
-		BigDecimal currencyLocked = getCurrency() == Currency.BRL ? brlTotal.subtract(brlAvailable) : null;
-
-		balance.setCoinAmount(coinAmount);
-		balance.setCurrencyAmount(currencyAmount);
-		balance.setCoinLocked(coinLocked);
-		balance.setCurrencyLocked(currencyLocked);
+			if (balance.getCurrencyAmount() != null && balance.getCoinAmount() != null)
+				break;
+		}
 
 		return balance;
 	}
@@ -543,9 +533,11 @@ public class MercadoBitcoinApiService extends ApiService {
 		JsonArray asking = orderBookJsonObject.getAsJsonArray("asks");
 		ArrayList<Order> askOrders = new ArrayList<Order>();
 		for (int i = 0; i < asking.size(); i++) {
-			JsonArray pairAmount = asking.get(i).getAsJsonArray();
-			BigDecimal coinAmount = new BigDecimal(pairAmount.get(1).toString());
-			BigDecimal currencyPrice = new BigDecimal(pairAmount.get(0).toString());
+			JsonArray pair = asking.get(i).getAsJsonArray();
+			String amountStr = pair.get(1).getAsString();
+			String priceStr = pair.get(0).getAsString();
+			BigDecimal coinAmount = new BigDecimal(amountStr);
+			BigDecimal currencyPrice = new BigDecimal(priceStr);
 			Order order = new Order(getCoin(), getCurrency(), RecordSide.SELL, coinAmount, currencyPrice);
 			order.setStatus(OrderStatus.ACTIVE);
 			order.setPosition(i + 1);
@@ -556,9 +548,11 @@ public class MercadoBitcoinApiService extends ApiService {
 		JsonArray bidding = orderBookJsonObject.get("bids").getAsJsonArray();
 		ArrayList<Order> bidOrders = new ArrayList<Order>();
 		for (int i = 0; i < bidding.size(); i++) {
-			JsonArray pairAmount = bidding.get(i).getAsJsonArray();
-			BigDecimal coinAmount = new BigDecimal(pairAmount.get(1).toString());
-			BigDecimal currencyPrice = new BigDecimal(pairAmount.get(0).toString());
+			JsonArray pair = bidding.get(i).getAsJsonArray();
+			String amountStr = pair.get(1).getAsString();
+			String priceStr = pair.get(0).getAsString();
+			BigDecimal coinAmount = new BigDecimal(amountStr);
+			BigDecimal currencyPrice = new BigDecimal(priceStr);
 			Order order = new Order(getCoin(), getCurrency(), RecordSide.BUY, coinAmount, currencyPrice);
 			order.setStatus(OrderStatus.ACTIVE);
 			order.setPosition(i + 1);
@@ -570,29 +564,32 @@ public class MercadoBitcoinApiService extends ApiService {
 	}
 
 	private Order getOrder(JsonObject jsonObject) {
-		String coinPair = jsonObject.get("coin_pair").getAsString().toUpperCase();
+		String coinPair = jsonObject.get("instrument").getAsString().toUpperCase();
 
-		Coin coin = Coin.valueOf(coinPair.substring(3).toUpperCase());
+		Coin coin = Coin.valueOf(coinPair.substring(0, 3).toUpperCase());
+		Currency currency = Currency.valueOf(coinPair.substring(4, 7).toUpperCase());
 
-		Currency currency = Currency.valueOf(coinPair.substring(0, 3).toUpperCase());
-		Integer sideInt = jsonObject.get("order_type").getAsInt();
-		RecordSide side = sideInt == 1 ? RecordSide.BUY : (sideInt == 2 ? RecordSide.SELL : null);
-		BigDecimal coinAmount = new BigDecimal(jsonObject.get("quantity").getAsString());
-		BigDecimal currencyPrice = new BigDecimal(jsonObject.get("limit_price").getAsString());
+		String sideStr = jsonObject.get("side").getAsString();
+		RecordSide side = sideStr.equals("buy") ? RecordSide.BUY : (sideStr.equals("sell") ? RecordSide.SELL : null);
+		BigDecimal coinAmount = new BigDecimal(jsonObject.get("qty").getAsString());
+		BigDecimal currencyPrice = new BigDecimal(jsonObject.get("limitPrice").getAsString());
 
 		Order order = new Order(coin, currency, side, coinAmount, currencyPrice);
-		order.setId(BigInteger.valueOf(jsonObject.get("order_id").getAsLong()));
-		Integer statusInt = jsonObject.get("status").getAsInt();
-		OrderStatus status = statusInt == 2 ? OrderStatus.ACTIVE
-				: (statusInt == 3 ? OrderStatus.CANCELED : (statusInt == 4 ? OrderStatus.COMPLETED : null));
+		order.setId((jsonObject.get("id").getAsString()));
+
+		String statusStr = jsonObject.get("status").getAsString();
+		OrderStatus status = statusStr.equals("working") ? OrderStatus.ACTIVE
+				: (statusStr.equals("cancelled") ? OrderStatus.CANCELED
+						: (statusStr.equals("filled") ? OrderStatus.COMPLETED : null));
 		order.setStatus(status);
-		long created = Integer.valueOf(jsonObject.get("created_timestamp").getAsString());
+
+		long created = jsonObject.get("created_at").getAsLong();
 		order.setCreationDate(Calendar.getInstance());
 		order.getCreationDate().setTimeInMillis((long) created * 1000);
 
 		List<Operation> operations = new ArrayList<Operation>();
-		JsonArray jsonOperationArray = jsonObject.get("operations") == null ? new JsonArray()
-				: jsonObject.get("operations").getAsJsonArray();
+		JsonArray jsonOperationArray = jsonObject.get("executions") == null ? new JsonArray()
+				: jsonObject.get("executions").getAsJsonArray();
 
 		for (JsonElement jsonOperation : jsonOperationArray) {
 			Operation operation = getOperation(jsonOperation.getAsJsonObject(), side);
@@ -607,64 +604,18 @@ public class MercadoBitcoinApiService extends ApiService {
 	private Operation getOperation(JsonObject jsonObject, RecordSide side) {
 		Operation operation;
 
-		long created = Long.valueOf(jsonObject.get("executed_timestamp").getAsString());
-		BigDecimal coinAmount = new BigDecimal(jsonObject.get("quantity").getAsString());
+		long created = Long.valueOf(jsonObject.get("executed_at").getAsString());
+		BigDecimal coinAmount = new BigDecimal(jsonObject.get("qty").getAsString());
 		BigDecimal currencyPrice = new BigDecimal(jsonObject.get("price").getAsString());
 
 		operation = new Operation(getCoin(), getCurrency(), side, coinAmount, currencyPrice);
 
-		operation.setId(BigInteger.valueOf((jsonObject.get("operation_id").getAsLong())));
+		operation.setId(jsonObject.get("id").getAsString());
 		operation.setRate(new BigDecimal(jsonObject.get("fee_rate").getAsString()));
 		operation.setCreationDate(Calendar.getInstance());
 		operation.getCreationDate().setTimeInMillis(created * 1000);
 
 		return operation;
-	}
-
-	// --------------------- Auxiliares methods
-
-	private String generateSignature(String parameters) throws NoSuchAlgorithmException, InvalidKeyException {
-		SecretKeySpec key = null;
-		Mac mac = null;
-
-		key = new SecretKeySpec(mbTapiCodeBytes, ENCRYPT_ALGORITHM);
-		mac = Mac.getInstance(ENCRYPT_ALGORITHM);
-		mac.init(key);
-		String sign = encodeHexString(mac.doFinal(parameters.getBytes()));
-		return sign;
-	}
-
-	private static final String encodeHexString(byte[] bytes) {
-		StringBuffer hexString = new StringBuffer();
-		for (int i = 0; i < bytes.length; i++) {
-			String hex = Integer.toHexString(0xFF & bytes[i]);
-			if (hex.length() == 1) {
-				hexString.append('0');
-			}
-			hexString.append(hex);
-		}
-		return hexString.toString();
-	}
-
-	private static final long generateTonce() {
-		long unixTime = System.currentTimeMillis() / 1000L;
-		return unixTime;
-	}
-
-	// --------------------- Constants and attributes
-
-	private enum ApiVersion {
-		V1, V3;
-	}
-
-	private static final String ENCRYPT_ALGORITHM = "HmacSHA512";
-	private static final String METHOD_PARAM = "tapi_method";
-	private static final String V1_METHOD_PARAM = "method";
-
-	private byte[] mbTapiCodeBytes;
-
-	private String getV1PrivateApiUrl() {
-		return getDomain() + "/tapi/";
 	}
 
 }
